tests/snapshots/run_wpt_conformance__onnx_log_float16_positive_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "log.https.any.js",
    "log float16 positive 2D tensor",
    "onnx",
    "PASS",
)
